// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Earnings displays lending maintenance banner when feature flag is enabled 1`] = `
<View>
  <View
    style={
      {
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Bold",
          "fontSize": 18,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingBottom": 8,
        }
      }
    >
      Your earnings
    </Text>
    <View>
      <View
        style={
          {
            "backgroundColor": "#9a63001a",
            "borderColor": "#9a6300",
            "borderLeftWidth": 4,
            "borderRadius": 4,
            "flexDirection": "row",
            "padding": 12,
            "paddingLeft": 8,
          }
        }
        testID="banneralert"
        variant="Alert"
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <SvgMock
            color="#9a6300"
            fill="currentColor"
            height={24}
            name="Danger"
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            width={24}
          />
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            We're down for maintenance. We'll be back online soon!
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Annual rate
          </Text>
          <View
            accessibilityLabel="Annual rate tooltip"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 15,
                "left": 15,
                "right": 15,
                "top": 15,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="annual-rate-tooltip"
          >
            <SvgMock
              color="#b7bbc8"
              fill="currentColor"
              height={16}
              name="Info"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </View>
        </View>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#457a39",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          2.6%
           APR
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Lifetime rewards
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Estimated annual earnings
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="earn-earnings-history-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          View earnings history
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Earnings displays pooled-staking maintenance banner when feature flag is enabled 1`] = `
<View>
  <View
    style={
      {
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Bold",
          "fontSize": 18,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingBottom": 8,
        }
      }
    >
      Your earnings
    </Text>
    <View>
      <View
        style={
          {
            "backgroundColor": "#9a63001a",
            "borderColor": "#9a6300",
            "borderLeftWidth": 4,
            "borderRadius": 4,
            "flexDirection": "row",
            "padding": 12,
            "paddingLeft": 8,
          }
        }
        testID="banneralert"
        variant="Alert"
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <SvgMock
            color="#9a6300"
            fill="currentColor"
            height={24}
            name="Danger"
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            width={24}
          />
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            We're down for maintenance. We'll be back online soon!
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Annual rate
          </Text>
          <View
            accessibilityLabel="Annual rate tooltip"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 15,
                "left": 15,
                "right": 15,
                "top": 15,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="annual-rate-tooltip"
          >
            <SvgMock
              color="#b7bbc8"
              fill="currentColor"
              height={16}
              name="Info"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </View>
        </View>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#457a39",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          2.6%
           APR
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Lifetime rewards
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Estimated annual earnings
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="earn-earnings-history-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          View earnings history
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Earnings should render correctly 1`] = `
<View>
  <View
    style={
      {
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Bold",
          "fontSize": 18,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingBottom": 8,
        }
      }
    >
      Your earnings
    </Text>
    <View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Annual rate
          </Text>
          <View
            accessibilityLabel="Annual rate tooltip"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 15,
                "left": 15,
                "right": 15,
                "top": 15,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="annual-rate-tooltip"
          >
            <SvgMock
              color="#b7bbc8"
              fill="currentColor"
              height={16}
              name="Info"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </View>
        </View>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#457a39",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          2.6%
           APR
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Lifetime rewards
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Estimated annual earnings
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="earn-earnings-history-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          View earnings history
        </Text>
      </View>
    </View>
  </View>
</View>
`;
